--- a/IngeteamApp/VIEW/ProgrammersViewer.xaml
+++ b/IngeteamApp/VIEW/ProgrammersViewer.xaml
@@ -8,8 +8,9 @@
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         
         mc:Ignorable="d"
+        Icon="C:\Users\Eduardo\source\repos\IngeteamApp - Copy (2)\IngeteamApp\Resources\IngeIco.ico"
         
-        Title="ProgrammersViewer" Height="600" Width="800">
+        Title="Programmers Manager" Height="600" Width="800">
     
     <Window.Resources>
         <vm:ProgrammerViewModel x:Key="ProgrammerVM"/>
@@ -48,8 +49,9 @@
         <Button Grid.Column="4" Grid.Row="8" Content="Add New" Margin="0,10" Command="{Binding AddProgrammersCommand}"/>
         <Button Grid.Column="4" Grid.Row="6" Content="Clear" Margin="0,10" Command="{Binding ClearCommand}"/> 
         <Button Grid.Column="4" Grid.Row="9" Content="Modify Current" Margin="0,10" Command="{Binding ModifyCommand}"/>
-        <Label Grid.Column="1" Grid.Row="7" Content="Name:" Margin="0,10,0,10"/>
-        <Label Grid.Column="1" Grid.Row="8" Content="Surame:" Margin="0,0,0,10"/>
+        <Button Grid.Column="4" Grid.Row="11" Margin="0,10" Content="Close" Click="Button_Click_1"/>
+        <Label Grid.Column="1" Grid.Row="7" Content="(*)Name:" Margin="0,10,0,10"/>
+        <Label Grid.Column="1" Grid.Row="8" Content="(*)Surame:" Margin="0,0,0,10"/>
         <Label Grid.Column="1" Grid.Row="9" Content="Email:" Margin="0,0,0,10"/>
         <Label Grid.Column="1" Grid.Row="10" Content="Address:" Margin="0,0,0,10"/>
         <Label Grid.Column="1" Grid.Row="11" Content="Phone:" Margin="0,0,0,10"/>
