--- a/IngeteamApp/MainWindow.xaml
+++ b/IngeteamApp/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IngeteamApp"
         mc:Ignorable="d"
-        Icon="C:\Users\Eduardo\source\repos\IngeteamApp - Copy (2)\IngeteamApp\Resources\IngeIco.ico"
+        Icon="pack://siteoforigin:,,,/Resources/IngeIco.ico"
         Title="IngeteamManagerApp" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -35,11 +35,7 @@
         <Button Grid.Column="2" Grid.Row="4" Content="Programmers Manager" Name="ProgrammersManager" Click="ProgrammersManager_Click" Width="150" Height="30" />
         <Button Grid.Column="4" Grid.Row="4" Content="Tasks Manager" Name="TasksManager" Margin="0.2,0,0.4,0.2" Click="TasksManager_Click" Width="150"/>
         <Button Grid.Column="5" Grid.Row="7" Content="Exit" Name="Exit" Margin="0.2,0,0.4,0.2" Width="100" Height="30" Click="Exit_Click"/>
-        <Image Width="300" Grid.Row="1" Grid.ColumnSpan="3" Grid.RowSpan="3">
-            <Image.Source>
-                <BitmapImage DecodePixelWidth="300" UriSource="/Resources/IngeLogo.jpg.png"/>
-            </Image.Source>
-        </Image>
+        <Image Width="300" Grid.Row="1" Grid.ColumnSpan="3" Grid.RowSpan="3" Source="pack://siteoforigin:,,,/Resources/IngeLogo.jpg.png"/>
 
     </Grid>
 </Window>
