--- a/IngeteamApp/VIEW/SubTasksViewer.xaml
+++ b/IngeteamApp/VIEW/SubTasksViewer.xaml
@@ -9,9 +9,9 @@
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         
         mc:Ignorable="d"
-        Icon="C:\Users\Eduardo\source\repos\IngeteamApp - Copy (2)\IngeteamApp\Resources\IngeIco.ico"
+        Icon="pack://siteoforigin:,,,/Resources/IngeIco.ico"
         
-        Title="SubTasks Manager" Height="600" Width="900">
+        Name ="SubTasksViewerW" Title="SubTasks Manager" Height="600" Width="900">
     <Window.Resources>
         <vm:TaskViewModel x:Key="TaskVM"/>
     </Window.Resources>
